--- a/src/app/features/facturas/components/factura-list/factura-list.component.html
+++ b/src/app/features/facturas/components/factura-list/factura-list.component.html
@@ -60,6 +60,9 @@
             </tr>
           </tbody>
         </table>
+        <div *ngIf="invoices.length === 0" class="text-center p-4">
+          <p class="text-gray-500 dark:text-gray-400">No se encontraron facturas</p>
+        </div>
       </div>
       <div class="flex justify-between items-center mt-4 text-gray-600 dark:text-gray-400">
         <span>
